--- a/FinalProject_Game/FinalProject_Game.csproj
+++ b/FinalProject_Game/FinalProject_Game.csproj
@@ -149,24 +149,27 @@
     <Content Include="Assets\knight.gif" />
     <Content Include="Assets\menu.gif" />
     <Content Include="Assets\menu2.gif" />
+    <Content Include="Assets\pikapikasound.mp3" />
     <Content Include="Assets\pikaright.gif" />
     <Content Include="Assets\pickatchu.png" />
     <Content Include="Assets\pika.png" />
     <Content Include="Assets\pikapika.gif" />
     <Content Include="Assets\pikaleft.gif" />
+    <Content Include="Assets\pika\pikaleft0.gif" />
     <Content Include="Assets\pika\pikaleft1.gif" />
     <Content Include="Assets\pika\pikaleft2.gif" />
     <Content Include="Assets\pika\pikaleft3.gif" />
-    <Content Include="Assets\pika\pikaleft4.gif" />
+    <Content Include="Assets\pika\pikaright0.gif" />
     <Content Include="Assets\pika\pikaright1.gif" />
     <Content Include="Assets\pika\pikaright2.gif" />
     <Content Include="Assets\pika\pikaright3.gif" />
-    <Content Include="Assets\pika\pikaright4.gif" />
     <Content Include="Assets\pika\pokemon.gif" />
     <Content Include="Assets\player.gif" />
     <Content Include="Assets\dragon gif.gif" />
     <Content Include="Assets\DRAGON.png" />
     <Content Include="Assets\player.png" />
+    <Content Include="Assets\pokeballcatchsound.mp3" />
+    <Content Include="Assets\pokeballsound.mp3" />
     <Content Include="Assets\pokemon.gif" />
     <Content Include="Assets\pokemonBanner.jpg" />
     <Content Include="Assets\pokemonnewBanner.jpg" />
@@ -174,7 +177,10 @@
     <Content Include="Assets\pokeMusicnew.mp3" />
     <Content Include="Assets\shovi.png" />
     <Content Include="Assets\sounds\pokeballsound.mp3" />
+    <Content Include="Assets\space.png" />
     <Content Include="Assets\tenor.gif" />
+    <Content Include="Assets\WASD.png" />
+    <Content Include="Assets\waveuppika.mp3" />
     <Content Include="Assets\yedidya-removebg-preview.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
